fix spacing on mobile for v2

--- a/VidenFrontEnd/src/App.css
+++ b/VidenFrontEnd/src/App.css
@@ -27,6 +27,7 @@
   }
 }
 
+
 .App-header {
   background-color: black;
   min-height: 4vh;
@@ -34,6 +35,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding:0px 20px;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -100,13 +102,14 @@ nav li {
   color: black;
   background-color: #BDDABC;
   border-radius: 50px;
-  padding: 10px 20px;
-  margin-right: 10px;
+  padding: 10px 10px;
+  /* margin-right: 10px; */
   outline-color: black;
 
 }
 .blogs-button{
   font-size:30px;
+  margin-right: 15px;
 }
 
 .nav-button:hover {
